cmake_minimum_required (VERSION 3.4.0)
project(7k2 VERSION 1.0
    DESCRIPTION "https://7kfans.com/"
    LANGUAGES CXX)

add_executable(7k2)

target_sources(7k2 PRIVATE 
src/ob_homin.cpp
src/otxtres.cpp
src/otownai.cpp
src/orock.cpp
src/of_marka.cpp
src/opower.cpp
src/oai_capt.cpp
src/dbglog.cpp
src/oc_eastp.cpp
src/8asm
src/8asm/ib_atm.asm
src/8asm/imgfun.h
src/8asm/ib_atrd.asm
src/8asm/ib_ar.asm
src/8asm/ir_m.asm
src/8asm/ib_at.asm
src/8asm/i_read.asm
src/8asm/colcode.h
src/8asm/ib_trdm.asm
src/8asm/i_bar.asm
src/8asm/ij_t.asm
src/8asm/ir.asm
src/8asm/ib_rd.asm
src/8asm/ib_tr.asm
src/8asm/ib_atr.asm
src/8asm/ib_trd.asm
src/8asm/ib_tm1.asm
src/8asm/ib_atd.asm
src/8asm/i_line.asm
src/8asm/ib.asm
src/8asm/ir_a.asm
src/8asm/i_xor.asm
src/8asm/imgfun.inc
src/8asm/all.inc
src/8asm/ic_r.asm
src/8asm/ir_am.asm
src/8asm/i_eremap.asm
src/8asm/ib_32.asm
src/8asm/ib_r.asm
src/8asm/i_pixel.asm
src/8asm/i_ctrl.asm
src/8asm/ib_tm3.asm
src/8asm/ib_tm2.asm
src/8asm/i_snow.asm
src/8asm/ib_dw.asm
src/8asm/ib_tdm.asm
src/8asm/ib2.asm
src/8asm/colcode.inc
src/8asm/i_emask.asm
src/8asm/ib_t.asm
src/8asm/ir_bar.asm
src/8asm/ic.asm
src/8asm/i_fremap.asm
src/8asm/ib_a.asm
src/8asm/i_font.asm
src/8asm/ib_td.asm
src/8asm/i_black.asm
src/8asm/ib_atrdm.asm
src/8asm/ib_atdm.asm
src/ovbrowi2.cpp
src/oscroll.cpp
src/omp_crc.cpp
src/ofirmai.cpp
src/oraceres.cpp
src/oplasma.cpp
src/oslider.cpp
src/olonglog.cpp
src/oun_act.cpp
src/ostate.cpp
src/of_mtrni.cpp
src/oun_grp.cpp
src/of_anim.cpp
src/ou_caras.cpp
src/otips.cpp
src/or_ai.cpp
src/oun_ind.cpp
src/otutor.cpp
src/oformat.cpp
src/ofirmif.cpp
src/osfrmres.cpp
src/ocoltbl.cpp
src/ospy2.cpp
src/of_speci.cpp
src/oitemres.cpp
src/ounita.cpp
src/ou_carat.cpp
src/otownpop.cpp
src/ou_wagon.cpp
src/oun_info.cpp
src/otalkfre.cpp
src/osedit_o.cpp
src/oc_east2.cpp
src/ocampgn.cpp
src/ofirmdrw.cpp
src/omatrix2.cpp
src/file_writer.cpp
src/oprofil2.cpp
src/osysview.cpp
src/or_news.cpp
src/oblob.cpp
src/odir.cpp
src/ow_trv.cpp
src/ogame.cpp
src/of_spy.cpp
src/oingmenu.cpp
src/or_eco.cpp
src/ohelp.cpp
src/oun_drw.cpp
src/of_basew.cpp
src/oskill.cpp
src/of_worki.cpp
src/ogamhall.cpp
src/oplant.cpp
src/odynarrb.cpp
src/of_fort.cpp
src/oc_east7.cpp
src/of_resea.cpp
src/oc_plc4.cpp
src/omousesp.cpp
src/ogfile.cpp
src/omousecr.cpp
src/ogamemp.cpp
src/omousege.cpp
src/file_output_stream.cpp
src/oflame.cpp
src/of_basea.cpp
src/of_anima.cpp
src/ositedrw.cpp
src/oun_item.cpp
src/of_wara.cpp
src/oc_eas20.cpp
src/oai_act.cpp
src/omodeid.cpp
src/oc_pld5.cpp
src/of_alch.cpp
src/oun_spab.cpp
src/of_facti.cpp
src/ogeta.cpp
src/ot_reps.cpp
src/ogenmap2.cpp
src/oun_ord.cpp
src/of_minei.cpp
src/oc_east9.cpp
src/ot_firm.cpp
src/ogfilea.cpp
src/oun_mode.cpp
src/oc_plc2.cpp
src/olocate.cpp
src/ot_endc.cpp
src/of_incui.cpp
src/olocbmp.cpp
src/ofirmlnk.cpp
src/mouse_sdl.cpp
src/oai_defe.cpp
src/player_desc.cpp
src/ocampgn3.cpp
src/oai_quer.cpp
src/onews.cpp
src/omousefr.cpp
src/owaypnt.cpp
src/ow_rock.cpp
src/ovbrowif.cpp
src/of_laira.cpp
src/onewsger.cpp
src/otornado.cpp
src/ofirmdie.cpp
src/omatrix.cpp
src/oai_buil.cpp
src/oai_eco.cpp
src/of_campi.cpp
src/oc_east3.cpp
src/oc_pld3.cpp
src/or_nat.cpp
src/otownat.cpp
src/oserial.cpp
src/ohsetres.cpp
src/otownlnk.cpp
src/of_campb.cpp
src/ovbrowse.cpp
src/of_lara2.cpp
src/otownif.cpp
src/oanline.cpp
src/ogamdemo.cpp
src/oun_hero.cpp
src/ow_fire.cpp
src/oteam.cpp
src/oc_east8.cpp
src/oc_eas15.cpp
src/omagic.cpp
src/ospy.cpp
src/orain3.cpp
src/olightn.cpp
src/otowndef.cpp
src/oc_eas19.cpp
src/orawres.cpp
src/ou_carai.cpp
src/osysinit.cpp
src/ou_godi.cpp
src/osysdet.cpp
src/imgfun
src/imgfun/ib.cpp
src/imgfun/i_read.cpp
src/imgfun/seekforward.cpp
src/imgfun/ib_war.cpp
src/imgfun/ib_warm.cpp
src/imgfun/i_scroll.cpp
src/imgfun/ib_ar.cpp
src/imgfun/ib_r.cpp
src/imgfun/ib_ahrdm.cpp
src/imgfun/ib_trm.cpp
src/imgfun/i_bar.cpp
src/imgfun/ib_trd.cpp
src/imgfun/ib_hrd.cpp
src/imgfun/crc.cpp
src/imgfun/ib_atrd.cpp
src/imgfun/ib_tr.cpp
src/imgfun/ib_a.cpp
src/imgfun/i_bright.cpp
src/imgfun/Makefile.am
src/imgfun/ib_bar.cpp
src/imgfun/ib_brm.cpp
src/imgfun/ib_atrdm.cpp
src/imgfun/ib_trdm.cpp
src/imgfun/i_effect.cpp
src/imgfun/ib_ahrd.cpp
src/imgfun/ib_at.cpp
src/imgfun/ib_wrm.cpp
src/imgfun/ic.cpp
src/imgfun/ib_t.cpp
src/imgfun/ib_atr.cpp
src/imgfun/i_alpha.cpp
src/imgfun/ib_barm.cpp
src/imgfun/ib_br.cpp
src/imgfun/ib_atrm.cpp
src/imgfun/ib_hrdm.cpp
src/imgfun/ib_wr.cpp
src/imgfun/ij_tr.cpp
src/imgfun/i_line.cpp
src/input_stream.cpp
src/ooptmenu.cpp
src/of_magii.cpp
src/oun_atk2.cpp
src/on_human.cpp
src/oisoarea.cpp
src/of_mfork.cpp
src/osprite.cpp
src/orockres.cpp
src/osedit_m.cpp
src/oc_eas22.cpp
src/osite.cpp
src/oregion.cpp
src/oc_pla6.cpp
src/oc_eas14.cpp
src/oai_mili.cpp
src/onewseng.cpp
src/orle.cpp
src/of_lish.cpp
src/ohillres.cpp
src/of_basei.cpp
src/oresdb.cpp
src/oc_easte.cpp
src/ospinner.cpp
src/oun_ai.cpp
src/otutor2.cpp
src/obaseoba.cpp
src/oinfo.cpp
src/oc_pld4.cpp
src/Makefile.am
src/ogamend.cpp
src/ogamsing.cpp
src/asm
src/asm/ib_atrd.asm
src/asm/ib_ar.asm
src/asm/ib_atk.asm
src/asm/ib_at.asm
src/asm/i_read.asm
src/asm/ib_trdm.asm
src/asm/i_scroll.asm
src/asm/i_bar.asm
src/asm/ib_atrm.asm
src/asm/ib_tk.asm
src/asm/i_bright.asm
src/asm/crc.asm
src/asm/ib_tr.asm
src/asm/ib_atr.asm
src/asm/ib_trd.asm
src/asm/ib_barm.asm
src/asm/i_effect.asm
src/asm/ib_br.asm
src/asm/i_line.asm
src/asm/ib.asm
src/asm/ib_trm.asm
src/asm/ij_tr.asm
src/asm/i_alpha.asm
src/asm/imgfun.inc
src/asm/CMakeLists.txt
src/asm/all.inc
src/asm/ip_td.asm
src/asm/ib_wrm.asm
src/asm/ib_r.asm
src/asm/i_ctrl.asm
src/asm/ib_wr.asm
src/asm/i_effect.inc
src/asm/ib_hrdm.asm
src/asm/ib_hrd.asm
src/asm/ib_arm.asm
src/asm/ib_ahrdm.asm
src/asm/ib_war.asm
src/asm/ib_bar.asm
src/asm/ib_ahrd.asm
src/asm/colcode.inc
src/asm/ib_t.asm
src/asm/ib_warm.asm
src/asm/ic.asm
src/asm/ib_a.asm
src/asm/ib_brm.asm
src/asm/ib_atrdm.asm
src/asm/ib_rm.asm
src/ogammain.cpp
src/osedit_h.cpp
src/onews2.cpp
src/of_off2i.cpp
src/mem_input_stream.cpp
src/of_camps.cpp
src/ounadraw.cpp
src/oblob2.cpp
src/ot_news.cpp
src/oai_gran.cpp
src/onationa.cpp
src/ob_flame.cpp
src/osedit_e.cpp
src/oc_pla3.cpp
src/ogfile3.cpp
src/owallres.cpp
src/oc_plc3.cpp
src/of_spyi.cpp
src/osysproc.cpp
src/oc_eas18.cpp
src/oc_pla1.cpp
src/ow_wall.cpp
src/oremote2.cpp
src/ou_cart.cpp
src/ofirmres.cpp
src/ovgabuf.cpp
src/onationb.cpp
src/oslidcus.cpp
src/of_incu.cpp
src/ofirmat.cpp
src/ostr.cpp
src/ocnation.cpp
src/osedit_p.cpp
src/ovgalock.cpp
src/osnowg.cpp
src/otrainee.cpp
src/onewsspa.cpp
src/oregions.cpp
src/of_spec.cpp
src/oflc.cpp
src/ofontchi.cpp
src/of_lair.cpp
src/oremotem.cpp
src/ofile.cpp
src/otowndrw.cpp
src/oremoteq.cpp
src/of_fact.cpp
src/owarpt.cpp
src/ogfile2.cpp
src/orebel.cpp
src/ospya.cpp
src/of_off2.cpp
src/output_stream.cpp
src/ocrc_sto.cpp
src/osnowres.cpp
src/obutt3d.cpp
src/oerrctrl.cpp
src/obullet.cpp
src/oun_if.cpp
src/ogamscen.cpp
src/olightn2.cpp
src/of_worka.cpp
src/obuttcus.cpp
src/ospin_s.cpp
src/obitmap.cpp
src/otalkres.cpp
src/oterrain.cpp
src/or_trade.cpp
src/of_magi.cpp
src/or_mil.cpp
src/ofirm.cpp
src/of_work.cpp
src/of_spya.cpp
src/otown.cpp
src/oherores.cpp
src/oai_seek.cpp
src/oun_ai2.cpp
src/ou_mons.cpp
src/or_spy.cpp
src/oai_attk.cpp
src/otownres.cpp
src/ogamsce2.cpp
src/oc_pla7.cpp
src/odynarr.cpp
src/of_lairi.cpp
src/of_offi.cpp
src/orespal.cpp
src/onewsfre.cpp
src/oc_eas23.cpp
src/oc_east6.cpp
src/oc_east4.cpp
src/omusic.cpp
src/omisc.cpp
src/ofiletxt.cpp
src/odate.cpp
src/of_rese.cpp
src/otwalres.cpp
src/obulleta.cpp
src/oc_eas16.cpp
src/of_monsi.cpp
src/or_town.cpp
src/ow_plant.cpp
src/oai_cap2.cpp
src/on_mons.cpp
src/oconfig.cpp
src/oai_act2.cpp
src/of_war.cpp
src/otalkmsg.cpp
src/ovolume.cpp
src/oc_east5.cpp
src/of_wari.cpp
src/ofirma.cpp
src/ocampgn4.cpp
src/otalkspa.cpp
src/16asm
src/16asm/imgfun.h
src/16asm/ib_atrd.asm
src/16asm/ib_ar.asm
src/16asm/ib_at.asm
src/16asm/i_read.asm
src/16asm/colcode.h
src/16asm/ib_trdm.asm
src/16asm/i_bar.asm
src/16asm/ib_atrm.asm
src/16asm/ib_tr.asm
src/16asm/ib_atr.asm
src/16asm/ib_trd.asm
src/16asm/i_effect.asm
src/16asm/i_line.asm
src/16asm/ib.asm
src/16asm/ib_trm.asm
src/16asm/ij_tr.asm
src/16asm/imgfun.inc
src/16asm/all.inc
src/16asm/ib_r.asm
src/16asm/i_ctrl.asm
src/16asm/i_effect.inc
src/16asm/ib_arm.asm
src/16asm/colcode.inc
src/16asm/A.BAT
src/16asm/ib_t.asm
src/16asm/ic.asm
src/16asm/ib_a.asm
src/16asm/ib_atrdm.asm
src/16asm/ib_rm.asm
src/osysseed.cpp
src/oc_east.cpp
src/oc_pla5.cpp
src/otransl.cpp
src/osprite2.cpp
src/obaseobj.cpp
src/ounitb.cpp
src/ogamcred.cpp
src/of_resei.cpp
src/of_minea.cpp
src/ovqueue.cpp
src/or_rank.cpp
src/ogenhill.cpp
src/ogenmap.cpp
src/of_alchi.cpp
src/oitem.cpp
src/oeffect.cpp
src/opreuse.cpp
src/oc_eas10.cpp
src/obitmapw.cpp
src/of_mine.cpp
src/oc_eas28.cpp
src/osnow1.cpp
src/ot_gmenu.cpp
src/obox.cpp
src/file_input_stream.cpp
src/ow_sound.cpp
src/oworld_z.cpp
src/ot_sedit.cpp
src/of_forti.cpp
src/osysfile.cpp
src/am.cpp
src/ou_god.cpp
src/osedit_f.cpp
src/openal_audio.cpp
src/ou_god2.cpp
src/osprtres.cpp
src/ose.cpp
src/oai_info.cpp
src/oai_main.cpp
src/vga_util.cpp
src/ot_camp.cpp
src/osoldier.cpp
src/ojpeg.cpp
src/osnow2.cpp
src/ou_caraa.cpp
src/oc_pld2.cpp
src/oai_dipl.cpp
src/wav_stream.cpp
src/oweather.cpp
src/osysdisp.cpp
src/ob_proj.cpp
src/oc_east1.cpp
src/ogamecon.cpp
src/oseres.cpp
src/oc_eas21.cpp
src/oend_con.cpp
src/ot_item.cpp
src/oc_pld1.cpp
src/oc_eas27.cpp
src/ores.cpp
src/ou_cara.cpp
src/of_inni.cpp
src/of_lishi.cpp
src/ot_talk.cpp
src/oun_atk.cpp
src/otutor3.cpp
src/oai_unit.cpp
src/omlink.cpp
src/olog.cpp
src/oworld.cpp
src/oevent.cpp
src/orain2.cpp
src/ovgabuf2.cpp
src/opfind.cpp
src/of_speca.cpp
src/otechres.cpp
src/vga_sdl.cpp
src/ospritea.cpp
src/ot_tutor.cpp
src/of_train.cpp
src/of_facta.cpp
src/odb.cpp
src/oblob2w.cpp
src/of_mfori.cpp
src/orain1.cpp
src/of_animi.cpp
src/oai_spy.cpp
src/of_campa.cpp
src/of_base.cpp
src/oc_pla4.cpp
src/olinear.cpp
src/oun_init.cpp
src/file_reader.cpp
src/oc_pla2.cpp
src/olzw.cpp
src/of_campu.cpp
src/osedit_v.cpp
src/ounitres.cpp
src/oc_eas11.cpp
src/surface_sdl.cpp
src/of_mtrn.cpp
src/of_inn.cpp
src/oexpmask.cpp
src/oun_proc.cpp
src/ocampgn2.cpp
src/of_traii.cpp
src/otalkger.cpp
src/of_magia.cpp
src/of_mark.cpp
src/ob_prog.cpp
src/ofont.cpp
src/otownwal.cpp
src/omonsres.cpp
src/oc_plot.cpp
src/ogamcamp.cpp
src/file_util.cpp
src/oimgres.cpp
src/oattack.cpp
src/multiplayer.cpp
src/otalkeng.cpp
src/obattle.cpp
src/opower2.cpp
src/or_tech.cpp
src/ot_unit.cpp
src/oprofile.cpp
src/of_mfort.cpp
src/otownind.cpp
src/oc_eas24.cpp
src/oc_eas13.cpp
src/oai_talk.cpp
src/otownbld.cpp
src/oc_eas17.cpp
src/obutton.cpp
src/of_traia.cpp
src/oerror.cpp
src/oc_eas12.cpp
src/of_marki.cpp
src/of_mtrna.cpp
src/oplace.cpp
src/orestxt.cpp
src/of_off.cpp
src/oresx.cpp
src/otowna.cpp
src/of_inna.cpp
src/of_camp.cpp
src/of_forta.cpp
src/osedit_r.cpp
src/omouseit.cpp
src/ogodres.cpp
src/of_alcha.cpp
src/oremote.cpp
src/oworld_m.cpp
src/oc_eas26.cpp
src/ot_basic.cpp
src/of_incua.cpp
src/ogameset.cpp
src/oc_plc1.cpp
src/oc_eas25.cpp
src/omem.cpp
src/oseditor.cpp
)

target_include_directories(7k2 PUBLIC include)

# Libraries

find_package(SDL2 REQUIRED)
find_package(OpenAL REQUIRED)
find_package(JPEG REQUIRED)
find_package(Boost COMPONENTS system filesystem REQUIRED)

target_include_directories(7k2 PUBLIC "${SDL2_INCLUDE_DIRS}/SDL2")
target_include_directories(7k2 PUBLIC ${OPENAL_INCLUDE_DIR})
target_include_directories(7k2 PUBLIC ${JPEG_INCLUDE_DIRS})
target_include_directories(7k2 PUBLIC ${Boost_INCLUDE_DIRS})

target_link_libraries (7k2
    SDL2::SDL2
    enet
    ${OPENAL_LIBRARY}
    ${JPEG_LIBRARIES}
    ${Boost_SYSTEM_LIBRARY}
    ${Boost_FILESYSTEM_LIBRARY}
)
